--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  audioplayers : ^5.2.1
   flutter:
     sdk: flutter
 
@@ -64,6 +65,7 @@ flutter:
     - assets/images/SpotifypreviewLogo.png
     - assets/images/spotifylogoA.png
     - assets/images/ArianaGrande.png
+    - assets/audio/song1.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
